# gig

./: .gitignore  Makefile  README.md  button.go  child_splitter.go  color.go  combo.go  cursor.go  drag.go  go.mod  group.go  input.go  listbox.go  menu.go  plot.go  plot_bars.go  plot_errorbars.go  plot_heatmap.go  plot_histogram.go  plot_line.go  plot_piechart.go  plot_scatter.go  plot_stairs.go  plot_stems.go  plot_vhlines.go  popup.go  selectable.go  slider.go  tab.go  table.go  text.go  tree.go  util.go  view.go  widget.go  window.go  window_splitter.go
console/: console.go
demos/: imgui.ini
demos/gig_demo/: button.go  child_splitter.go  color.go  console.go  custom_rendering.go  dialog.go  drag.go  imgui.ini  input.go  list.go  main.go  popup.go  (+18 more)
dialog/: dialog.go  filedialog.go
imgui/: build_devgl.go  build_devvk.go  buildgl.go  buildvk.go  button.go  clipboard_util.go  clipping.go  color.go  color_util.go  colors.go  combo.go  context.go  cstring.go  cursor.go  demo_info.go  disabling.go  display.go  drag.go  dragdrop.go  drawlist.go  focus.go  font.go  imgui.ini  implot.go  implot_types.go  input.go  io.go  keyboard_util.go  libs_common.cpp  libs_opengl3.cpp  libs_vulkan.cpp  listbox.go  log.go  menu.go  misc_util.go  mouse_util.go  plot.go  popup.go  selectable.go  settings_util.go  (+14 more)
imgui/libs/: .gitignore  CMakeLists.txt  Makefile
imgui/libs/cimgui/: cimgui.cpp  cimgui.h
imgui/libs/cimgui/generator/output/: definitions.json  definitions.lua  structs_and_enums.json  structs_and_enums.lua
imgui/libs/cimplot/implot/: implot_demo.cpp
imgui/libs/display/: display.h  displaygl.cpp  displayvk.cpp
imgui/libs/vulkan/: README.md
logtable/: logtable.go
(+22 files in other folders)
